<?xml version="1.0"?>
<package>
  <name>hokuyo3d</name>
  <version>0.1.1</version>
  <description>ROS driver node for HOKUYO 3D LIDARs</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
