<?xml version="1.0"?>
<package format="2">
  <name>hokuyo3d</name>
  <version>0.2.2</version>
  <description>ROS driver node for HOKUYO 3D LIDARs</description>

  <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  
  <test_depend>roslint</test_depend>
</package>
